Fix color contrast and styling for tags.

--- a/_includes/style-dark.scss
+++ b/_includes/style-dark.scss
@@ -5,7 +5,7 @@
 @use "base/variables" with (
     $alpha: #aaa,
     $beta: #ededed,
-    $gama: #242424,
+    $gama: #888,
     $delta: #9300ff,
     $epsilon: #222,
     $omega: #000,
