--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -3,7 +3,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace !default
 
 $alpha: #242424 !default
 $beta: #222 !default
-$gama: #aaa !default
+$gama: #5a5a5a !default
 $delta: #4b0082 !default
 $epsilon: #ededed !default
 $omega: #fff !default
