--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -28,7 +28,8 @@
         border-radius: 3px
         font-size: 1.1rem
         background: $epsilon
-        color: $alpha
+        color: $zeta
+        font-weight: 500
         letter-spacing: 1px
         margin: 3px 1px
         text-decoration: none
