--- a/_sass/pages/tags.sass
+++ b/_sass/pages/tags.sass
@@ -25,20 +25,33 @@
 
 .tags > .list
     > .item
-        font-weight: 300
+        font-weight: 600
         text-transform: uppercase
         text-align: center
         -webkit-font-smoothing: antialiased
         text-rendering: optimizeLegibility
-        padding: 3px 9px
-        border-radius: 3px
+        padding: 3px 4px
         font-size: 1.3rem
-        background: $epsilon
         color: $alpha
         letter-spacing: 1px
         margin: 0 0.5rem 1rem
-        text-decoration: none
+        text-decoration: underline
         display: inline-block
+
+        &:hover
+            color: $delta
+
+.tag-heading
+
+    > .tag-link
+        color: inherit
+        font-weight: 600
+
+
+    > .tag-feed
+        font-size: 0.7em
+        margin-left: 6px
+        text-decoration: none
 
 .tag-list > .list
     padding: 0
@@ -66,8 +79,6 @@
     > .item:hover > .url > .title
         color: $delta
 
-    // maybe we can't nest html5 elements
-    // can you help me?
     aside
         position: relative
         top: 2px
